--- a/style.css
+++ b/style.css
@@ -11,6 +11,9 @@
   --color-white: hsl(0, 0%, 100%);
   --color-bg-blue: hsl(var(--hue), 46%, 40%);
   --color-bg-search: hsla(0, 0%, 100%, 0.2);
+
+  --color-heading: hsl(240, 6%, 13%);
+  --color-texting: hsl(240, 5%, 7%);
 }
 
 body {
@@ -18,7 +21,11 @@ body {
   font-size: 1.6rem;
 }
 
-header {
+.wrapper {
+  padding: 0 2.8rem;
+}
+
+header.wrapper {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -72,4 +79,47 @@ form {
 
 .input-wrapper input:focus {
   outline: 1.5px solid var(--color-white);
+}
+
+.img-content {
+  overflow: hidden;
+}
+
+main img {
+  width: 104%;
+  position: relative;
+  left: -6px;
+}
+
+.heading {
+  margin: 3rem 0;
+
+  display: grid;
+  gap: 0.8rem;
+}
+
+main h1 {
+  color: var(--color-heading);
+  font-size: 2.4rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 160%;
+}
+
+.liked-disliked {
+  display: flex;
+  gap: 1.2rem;
+}
+
+button {
+  background: none;
+  border: 0;
+  cursor: pointer;
+}
+
+.content p {
+  color: var(--color-texting);
+  font-style: normal;
+  font-weight: 400;
+  line-height: 160%;
 }
