--- a/style.css
+++ b/style.css
@@ -13,8 +13,10 @@
   --color-bg-search: hsla(0, 0%, 100%, 0.2);
 
   --color-heading: hsl(240, 6%, 13%);
-  --color-texting: hsl(240, 5%, 7%);
+  --color-texting: hsl(240, 6%, 7%);
   --color-bg-liked-disliked: hsl(var(--hue), 91%, 25%);
+
+  --color-bg-footer: hsla(195, 46%, 40%, 1);
 }
 
 body {
@@ -127,4 +129,67 @@ button svg rect {
   font-style: normal;
   font-weight: 400;
   line-height: 160%;
+}
+
+aside h2 {
+  padding: 3.4rem 0 3.2rem;
+  color: var(--color-heading);
+  font-size: 2.4rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 160%;
+}
+
+ul {
+  margin-bottom: 3.9rem;
+  max-width: 50.4rem;
+
+  display: grid;
+  gap: 3.2rem;
+}
+
+ul li {
+  list-style: none;
+}
+
+ul li a {
+  display: flex;
+  gap: 1.6rem;
+
+  text-decoration: none;
+}
+
+ul li a img {
+  max-width: 16rem;
+  object-fit: cover;
+  border-radius: 0.5rem;
+}
+
+ul li a > div h3 {
+  color: var(--color-heading);
+  font-size: 1.8rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 160%;
+
+  margin-bottom: 0.5rem;
+}
+
+ul li a > div p {
+  color: var(--color-texting);
+  font-size: 1.4rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 160%;
+}
+
+footer {
+  padding: 2rem;
+  background-color: var(--color-bg-footer);
+
+  color: var(--color-white);
+  text-align: center;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
 }
