--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
   --color-texting: hsl(240, 6%, 7%);
   --color-bg-liked-disliked: hsl(var(--hue), 91%, 25%);
 
-  --color-bg-footer: hsla(195, 46%, 40%, 1);
+  --color-bg-footer: hsla(var(--hue), 46%, 40%, 1);
 }
 
 body {
@@ -24,17 +24,16 @@ body {
   font-size: 1.6rem;
 }
 
-.wrapper {
-  padding: 0 2.8rem;
+header {
+  background: var(--color-bg-blue);
 }
 
-header.wrapper {
+.wrapper {
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 2.5rem;
 
-  background: var(--color-bg-blue);
   padding: 1.2rem 2.8rem;
 }
 
@@ -42,7 +41,7 @@ header svg path {
   fill: var(--color-bg-blue);
 }
 
-header > img {
+.wrapper > img {
   width: 4.2rem;
   height: 4.2rem;
 
@@ -96,6 +95,7 @@ main img {
 
 .heading {
   margin: 3rem 0;
+  padding: 0 2.8rem;
 
   display: grid;
   gap: 0.8rem;
@@ -124,11 +124,19 @@ button svg rect {
   fill: var(--color-bg-liked-disliked);
 }
 
-.content p {
+.article {
+  padding: 0 2.8rem;
+}
+
+.article p {
   color: var(--color-texting);
   font-style: normal;
   font-weight: 400;
   line-height: 160%;
+}
+
+aside {
+  padding: 0 2.8rem;
 }
 
 aside h2 {
@@ -192,4 +200,59 @@ footer {
   font-style: normal;
   font-weight: 600;
   line-height: normal;
+}
+
+@media (min-width: 1020px) {
+  body {
+    height: 100vh;
+
+    display: grid;
+    grid-template-rows: max-content 1fr max-content;
+  }
+
+  .size-limit {
+    max-width: 124rem;
+    margin-inline: auto;
+  }
+
+  .heading,
+  .article,
+  aside {
+    padding: 0;
+  }
+
+  .content {
+    display: grid;
+    grid-template-areas: "main aside";
+    gap: 4.4rem 3.4rem;
+
+    padding: 4.4rem 2.8rem 4rem;
+  }
+
+  main {
+    grid-area: main;
+  }
+
+  .heading {
+    grid-template-columns: 1fr max-content;
+  }
+
+  aside {
+    grid-area: aside;
+
+    max-width: 40rem;
+  }
+
+  aside h2 {
+    padding: 0 0 3.2rem;
+  }
+
+  ul {
+    margin: 0;
+  }
+
+  main img {
+    width: 100%;
+    left: initial;
+  }
 }
